Move tab hover opacity state handling from Tab to TabStrip

The opacities based on colors and contrast ratios need to be
recalculated when window active state or colors change, and
doing this for all tabs is not efficient, so the stored
opacities are moved to TabStrip for use by all its tabs.
The motivation for this CL was to fix a bug where some tabs
had different hover opacities than others because they
were not updating with change in window active state.

Bug: 872310
Change-Id: Ia7367227df005470364da10b43df429f9e4e8e47
Reviewed-on: https://chromium-review.googlesource.com/1168140
Commit-Queue: Orin Jaworski <orinj@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581806}
Former-commit-id: 944434030c905c00deec8919a5afc9e100d9f365